formating document indentation

--- a/index.html
+++ b/index.html
@@ -1,186 +1,181 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Idea Leaderboard</title>
-		<link rel="stylesheet" href="css/style.css" />
-		<link rel="stylesheet" href="css/all.min.css" />
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
-			rel="stylesheet"
-		/>
-	</head>
 
-	<body>
-		<nav>
-			<div class="logo">
-				<img src="images/icons/logo.png" alt="logo" />
-				<h1>Idea</h1>
-			</div>
-			<ul class="nav-items" id="navbar">
-				<li><a href="#top-students">Students</a></li>
-				<li><a href="#top-blogs">Blogs</a></li>
-				<li><a href="#latest-courses">Courses</a></li>
-				<li>
-					<a href="#">
-                        <img src="images/icons/profile.png" alt="profile"/>
-                    </a>
-				</li>
-			</ul>
-			<div class="burger">
-				<span id="line1"></span>
-				<span id="line2"></span>
-				<span id="line3"></span>
-			</div>
-		</nav>
-		<main>
-			<section class="top">
-				<h2 class="title">Top student</h2>
-				<div id="top-students">
-					<div class="student">
-						<img src="images/students/student-1.png" alt="" />
-						<h3>John Smith</h3>
-					</div>
-					<div class="student">
-						<img src="images/students/student-2.png" alt="" />
-						<h3>Luke Jongwe</h3>
-					</div>
-					<div class="student">
-						<img src="images/students/student-3.png" alt="" />
-						<h3>Luke Shaw</h3>
-					</div>
-					<div class="student">
-						<img src="images/students/student-4.png" alt="" />
-						<h3>Michel Holding</h3>
-					</div>
-					<div class="student">
-						<img src="images/students/student-5.png" alt="" />
-						<h3>Andrew Nikelson</h3>
-					</div>
-					<div class="student">
-						<img src="images/students/student-6.png" alt="" />
-						<h3>John Snow</h3>
-					</div>
-				</div>
-				<hr />
-				<h2 class="title">Top Blogs</h2>
-				<div id="top-blogs">
-					<div class="blogs">
-						<img src="images/blogs/blog-1.png" alt="" />
-						<div class="blog-info">
-							<h3>13 of My Favorite UI/UX Goodies</h3>
-							<p>By <span class="author">Danny Sapio</span></p>
-						</div>
-					</div>
-					<div class="blogs">
-						<img src="images/blogs/blog-2.png" alt="" />
-						<div class="blog-info">
-							<h3>UI cheat sheet: list vs grids</h3>
-							<p>By <span class="author">Tess Gadd</span></p>
-						</div>
-					</div>
-					<div class="blogs">
-						<img src="images/blogs/blog-3.png" alt="" />
-						<div class="blog-info">
-							<h3>7 typography tips for interface design</h3>
-							<p>By <span class="author">Jeremiah Lam</span></p>
-						</div>
-					</div>
-					<div class="blogs">
-						<img src="images/blogs/blog-4.png" alt="" />
-						<div class="blog-info">
-							<h3>Your logo is copied</h3>
-							<p>
-								By <span class="author">Ferdinand Vogler</span>
-							</p>
-						</div>
-					</div>
-				</div>
-			</section>
-			<section>
-				<h2 class="title">Top Courses</h2>
-				<div id="latest-courses">
-					<div class="course">
-						<img src="images/courses/course-1.png" alt="" />
-						<div class="course-detail">
-							<h4>
-								<a href="">React - The Complete Guide 2021</a>
-							</h4>
-							<p class="tutor">Reed Krakoff</p>
-							<div class="course-info">
-								<div class="ratings">
-									<i class="fas fa-star"></i>
-									<i class="fas fa-star"></i>
-									<i class="fas fa-star"></i>
-									<i class="fas fa-star"></i>
-									<i class="fas fa-star-half-alt"></i>
-									<span>4.5</span>
-								</div>
-								<div class="duration">
-									<i class="far fa-clock"></i>
-									<span>1:30 hr</span>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="course">
-						<img src="images/courses/course-2.png" alt="" />
-						<div class="course-detail">
-							<h4>
-								<a href=""
-									>Powerpoint 2021 Master Powerpoint Course</a
-								>
-							</h4>
-							<p class="tutor">Walter Scott</p>
-							<div class="course-info">
-								<div class="ratings">
-									<i class="fas fa-star"></i>
-									<i class="fas fa-star"></i>
-									<i class="fas fa-star"></i>
-									<i class="fas fa-star"></i>
-									<i class="fas fa-star empty-star"></i>
-									<span>4.3</span>
-								</div>
-								<div class="duration">
-									<i class="far fa-clock"></i>
-									<span>1:30 hr</span>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="course">
-						<img src="images/courses/course-3.png" alt="" />
-						<div class="course-detail">
-							<h4>
-								<a href=""
-									>The Complete JavaScript Course 2021</a
-								>
-							</h4>
-							<p class="tutor">Reed Krakoff</p>
-							<div class="course-info">
-								<div class="ratings">
-									<i class="fas fa-star"></i>
-									<i class="fas fa-star"></i>
-									<i class="fas fa-star"></i>
-									<i class="fas fa-star"></i>
-									<i class="fas fa-star-half-alt"></i>
-									<span>4.5</span>
-								</div>
-								<div class="duration">
-									<i class="far fa-clock"></i>
-									<span>1:30 hr</span>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
-		</main>
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Idea Leaderboard</title>
+	<link rel="stylesheet" href="css/style.css" />
+	<link rel="stylesheet" href="css/all.min.css" />
+	<link rel="preconnect" href="https://fonts.googleapis.com" />
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+	<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" />
+</head>
 
-		<script src="./script.js"></script>
-	</body>
+<body>
+	<nav>
+		<div class="logo">
+			<img src="images/icons/logo.png" alt="logo" />
+			<h1>Idea</h1>
+		</div>
+		<ul class="nav-items" id="navbar">
+			<li><a href="#top-students">Students</a></li>
+			<li><a href="#top-blogs">Blogs</a></li>
+			<li><a href="#latest-courses">Courses</a></li>
+			<li>
+				<a href="#">
+					<img src="images/icons/profile.png" alt="profile" />
+				</a>
+			</li>
+		</ul>
+		<div class="burger">
+			<span id="line1"></span>
+			<span id="line2"></span>
+			<span id="line3"></span>
+		</div>
+	</nav>
+	<main>
+		<section class="top">
+			<h2 class="title">Top student</h2>
+			<div id="top-students">
+				<div class="student">
+					<img src="images/students/student-1.png" alt="" />
+					<h3>John Smith</h3>
+				</div>
+				<div class="student">
+					<img src="images/students/student-2.png" alt="" />
+					<h3>Luke Jongwe</h3>
+				</div>
+				<div class="student">
+					<img src="images/students/student-3.png" alt="" />
+					<h3>Luke Shaw</h3>
+				</div>
+				<div class="student">
+					<img src="images/students/student-4.png" alt="" />
+					<h3>Michel Holding</h3>
+				</div>
+				<div class="student">
+					<img src="images/students/student-5.png" alt="" />
+					<h3>Andrew Nikelson</h3>
+				</div>
+				<div class="student">
+					<img src="images/students/student-6.png" alt="" />
+					<h3>John Snow</h3>
+				</div>
+			</div>
+			<hr />
+			<h2 class="title">Top Blogs</h2>
+			<div id="top-blogs">
+				<div class="blogs">
+					<img src="images/blogs/blog-1.png" alt="" />
+					<div class="blog-info">
+						<h3>13 of My Favorite UI/UX Goodies</h3>
+						<p>By <span class="author">Danny Sapio</span></p>
+					</div>
+				</div>
+				<div class="blogs">
+					<img src="images/blogs/blog-2.png" alt="" />
+					<div class="blog-info">
+						<h3>UI cheat sheet: list vs grids</h3>
+						<p>By <span class="author">Tess Gadd</span></p>
+					</div>
+				</div>
+				<div class="blogs">
+					<img src="images/blogs/blog-3.png" alt="" />
+					<div class="blog-info">
+						<h3>7 typography tips for interface design</h3>
+						<p>By <span class="author">Jeremiah Lam</span></p>
+					</div>
+				</div>
+				<div class="blogs">
+					<img src="images/blogs/blog-4.png" alt="" />
+					<div class="blog-info">
+						<h3>Your logo is copied</h3>
+						<p>
+							By <span class="author">Ferdinand Vogler</span>
+						</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section>
+			<h2 class="title">Top Courses</h2>
+			<div id="latest-courses">
+				<div class="course">
+					<img src="images/courses/course-1.png" alt="" />
+					<div class="course-detail">
+						<h4>
+							<a href="">React - The Complete Guide 2021</a>
+						</h4>
+						<p class="tutor">Reed Krakoff</p>
+						<div class="course-info">
+							<div class="ratings">
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star-half-alt"></i>
+								<span>4.5</span>
+							</div>
+							<div class="duration">
+								<i class="far fa-clock"></i>
+								<span>1:30 hr</span>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="course">
+					<img src="images/courses/course-2.png" alt="" />
+					<div class="course-detail">
+						<h4>
+							<a href="">Powerpoint 2021 Master Powerpoint Course</a>
+						</h4>
+						<p class="tutor">Walter Scott</p>
+						<div class="course-info">
+							<div class="ratings">
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star empty-star"></i>
+								<span>4.3</span>
+							</div>
+							<div class="duration">
+								<i class="far fa-clock"></i>
+								<span>1:30 hr</span>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="course">
+					<img src="images/courses/course-3.png" alt="" />
+					<div class="course-detail">
+						<h4>
+							<a href="">The Complete JavaScript Course 2021</a>
+						</h4>
+						<p class="tutor">Reed Krakoff</p>
+						<div class="course-info">
+							<div class="ratings">
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star-half-alt"></i>
+								<span>4.5</span>
+							</div>
+							<div class="duration">
+								<i class="far fa-clock"></i>
+								<span>1:30 hr</span>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+	</main>
+
+	<script src="./script.js"></script>
+</body>
+
 </html>
